# -speaker-analysis

./: .env.example  .envrc  .gitignore  flake.nix  pyproject.toml
nix/: python.nix
python/: main.py
python/src/: data.py  openai_client.py
src/: analyze_speaker.py  data.py  main.py  openai_client.py  to_mp3.py
src/lib/: env.py  openai_client.py
