[tool.poetry]
name = "speaker-analysis"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
openai = "^0.27.4"
ffmpeg-python = "^0.2.0"
pyannote-audio = "^2.1.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
